Fix those god damn format issues

--- a/NKThesis.cfg
+++ b/NKThesis.cfg
@@ -61,17 +61,15 @@
   \parindent 0em
   \thispagestyle{empty}
   % \zihaowu
-  % \def\arraystretch{1.5}
   % \begin{tabular}{rlrl}
   % 中图分类号:&\hbox to 75mm{\NKT@keyvalue{zhongtufenleihao}\hfil} &学校代码:&\NKT@keyvalue{xuexiaodaima}\\
   % UDC:&\NKT@keyvalue{UDC}&密级: &\NKT@keyvalue{miji}
   % \end{tabular}
-
   \vskip 30mm
   \begin{center}
   {\def\CJKglue{\hskip 0.5em}
     \zihaonku\jiacu
-    南开大学
+    \bfseries 南开大学
   }
   \vskip 9pt
   \vskip 9pt %小五号单倍行距空行
@@ -80,29 +78,31 @@
      本科生毕业论文（设计）
   }
 
-  \vskip 30mm
-  \zihaoxiaosan
-  % \baselineskip 30pt
-  % \def\arraystretch{2}
-  \tabcolsep 0.1em
-  \begin{tabular}{rl}
-    中文题目：\hskip 0.5em & \parbox[t]{6cm}{\cukai{\CJKunderline{\NKT@keyvalue{lunwentimuzh}\hfill}}}  \\
-    英文题目：\hskip 0.5em & \parbox[t]{6cm}{\uline{Experimental Design and Analysis for Collaborative Linear Manifold Learning\hfill}}
-  \end{tabular}
-
+  % \renewcommand{\arraystretch}{2}
   \vskip 30mm
   \zihaosi
-  % \def\arraystretch{2}
+  % \baselineskip 30pt
   \tabcolsep 0.1em
-  \begin{tabular}{rl}
-    学\hskip 2em号：\hskip 0.5em & \underline{\hbox to 50mm{\kaiti\NKT@keyvalue{xuehao}\hfil}} \\
-    姓\hskip 2em名：\hskip 0.5em & \underline{\hbox to 50mm{\kaiti\NKT@keyvalue{xingming}\hfil}} \\
-    年\hskip 2em级：\hskip 0.5em & \underline{\hbox to 50mm{\kaiti\NKT@keyvalue{nianji}\hfil}} \\
-    学\hskip 2em院：\hskip 0.5em & \underline{\hbox to 50mm{\kaiti\NKT@keyvalue{xueyuan}\hfil}} \\
-    系\hskip 2em别：\hskip 0.5em & \underline{\hbox to 50mm{\kaiti\NKT@keyvalue{xibie}\hfil}} \\
-    专\hskip 2em业：\hskip 0.5em & \underline{\hbox to 50mm{\kaiti\NKT@keyvalue{zhuanye}\hfil}} \\
-    完成日期：\hskip 0.5em & \underline{\hbox to 50mm{\kaiti\NKT@keyvalue{wanchengriqi}\hfil}} \\
-    指导教师：\hskip 0.5em & \underline{\hbox to 50mm{\kaiti\NKT@keyvalue{zhidaojiaoshi}\hfil}}
+  \begin{tabular}{rc}
+    中文题目：\hskip 0.5em & \parbox[t]{9cm}{\centerline{\songti{\CJKunderline{\NKT@keyvalue{lunwentimuzh}\hfill}}}}  \\
+    英文题目：\hskip 0.5em & \parbox[t]{9cm}{\uline{Experimental Design and Analysis for Collaborative Linear Manifold Learning\hfill}}
+  \end{tabular}
+
+  \vskip 50mm
+  \zihaosi
+  % \def\arraystretch{2}
+  \tabcolsep 0.5em
+  \begin{tabular}{rc}
+  \linespread{2.5} 
+    学\hskip 2em号：\hskip 0.5em & \underline{\hbox to 50mm{\hskip 3em\songti\NKT@keyvalue{xuehao}\hfil}} \\
+    姓\hskip 2em名：\hskip 0.5em & \underline{\hbox to 50mm{\hskip 3.3em\songti\NKT@keyvalue{xingming}\hfil}} \\
+    年\hskip 2em级：\hskip 0.5em & \underline{\hbox to 50mm{\hskip 3.3em\songti\NKT@keyvalue{nianji}\hfil}} \\
+    学\hskip 2em院：\hskip 0.5em & \underline{\hbox to 50mm{\hskip 3em\songti\NKT@keyvalue{xueyuan}\hfil}} \\
+    系\hskip 2em别：\hskip 0.5em & \underline{\hbox to 50mm{\hskip 3em\songti\NKT@keyvalue{xibie}\hfil}} \\
+    专\hskip 2em业：\hskip 0.5em & \underline{\hbox to 50mm{\hskip 3em\songti\NKT@keyvalue{zhuanye}\hfil}} \\
+    指导教师：\hskip 0.5em & \underline{\hbox to 50mm{\hskip 2em\songti\NKT@keyvalue{zhidaojiaoshi}\hfil}} \\
+    完成日期：\hskip 0.5em & \underline{\hbox to 50mm{\hskip 1.5em\songti\NKT@keyvalue{wanchengriqi}\hfil}}
+    
   \end{tabular}
 
   \end{center}
