THE FINAL EDITION, add some materials, update some format errors and rewrite a complete fucking Word Edition..

--- a/NKThesis.cfg
+++ b/NKThesis.cfg
@@ -85,7 +85,7 @@
   \tabcolsep 0.1em
   \begin{tabular}{rc}
     中文题目：\hskip 0.5em & \parbox[t]{9cm}{\centerline{\songti{\CJKunderline{\NKT@keyvalue{lunwentimuzh}\hfill}}}}  \\
-    英文题目：\hskip 0.5em & \parbox[t]{9cm}{\uline{Experimental Design and Analysis for Collaborative Linear Manifold Learning\hfill}}
+    英文题目：\hskip 0.5em & \parbox[t]{9cm}{\uline{Design and Analysis of Experiments on Collaborative Linear Manifold Learning\hfill}}
   \end{tabular}
 
   \vskip 50mm
